add presets & fix himself

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "author": "Romain Racamier-Lafon <romain.racamier@gmail.com>",
   "bugs": "https://github.com/Shuunen/eslint-plugin-shuunen/issues",
   "dependencies": {
-    "@eslint/eslintrc": "3.1"
+    "@eslint/eslintrc": "3.1",
+    "eslint-plugin-perfectionist": "2.11",
+    "eslint-plugin-unicorn": "54.0",
+    "eslint-plugin-vue": "9.26",
+    "globals": "15.6"
   },
   "description": "My personal ESLint configs & rules",
   "devDependencies": {
@@ -11,14 +15,13 @@
     "@eslint/js": "9.5",
     "@tsconfig/strictest": "2.0",
     "@types/eslint__eslintrc": "2.1",
+    "@types/eslint__js": "8.42",
     "@types/node": "20",
     "@vitest/coverage-v8": "1.6",
     "dependency-cruiser": "latest",
     "esbuild": "0.21",
     "eslint": "9.5",
     "eslint-plugin-eslint-plugin": "6.1",
-    "eslint-plugin-unicorn": "54",
-    "globals": "15",
     "npm-parallel": "2",
     "repo-check": "1.36",
     "typescript": "5.5",
@@ -30,8 +33,7 @@
   },
   "files": [
     "index.js",
-    "rules",
-    "configs"
+    "rules"
   ],
   "homepage": "https://github.com/Shuunen/eslint-plugin-shuunen",
   "keywords": [
@@ -55,8 +57,8 @@
     "build": "echo no build task is needed && echo build success",
     "check": "pnpm install && echo install success && pnpm build && repo-check && pnpm lint && pnpm test && echo check success",
     "lint": "pnpm lint:tsc && pnpm lint:biome && pnpm lint:eslint && pnpm lint:dep && echo lint success",
-    "lint:biome": "biome lint --error-on-warnings --write --unsafe && biome format --write configs rules && echo lint:biome success",
-    "lint:dep": "depcruise configs rules index.js --config && echo lint:dep success",
+    "lint:biome": "biome lint --error-on-warnings --write --unsafe && biome format --write rules && echo lint:biome success",
+    "lint:dep": "depcruise rules index.js --config && echo lint:dep success",
     "lint:eslint": "eslint --cache --max-warnings 0 . && echo lint:eslint success",
     "lint:tsc": "tsc --noEmit && echo lint:tsc success",
     "postversion": "git push && git push --tags && npm publish",
