--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "checkJs": true,
     "lib": [
       "ESNext"
     ],
@@ -17,6 +18,6 @@
   ],
   "extends": "@tsconfig/strictest/tsconfig.json",
   "include": [
-    "configs"
+    "*.js"
   ]
 }
