--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@eslint/eslintrc": "3.1",
     "eslint-plugin-perfectionist": "2.11",
+    "eslint-plugin-tailwindcss": "3.17",
     "eslint-plugin-unicorn": "54.0",
     "eslint-plugin-vue": "9.26",
     "globals": "15.6"
