--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.8.2/schema.json",
   "files": {
     "ignore": [
       "node_modules/**",
@@ -9,9 +9,6 @@
   },
   "formatter": {
     "enabled": true,
-    "ignore": [
-      "*.json"
-    ],
     "indentStyle": "space",
     "indentWidth": 2,
     "lineEnding": "lf",
@@ -24,6 +21,11 @@
       "lineWidth": 180,
       "quoteStyle": "single",
       "semicolons": "asNeeded"
+    }
+  },
+  "json": {
+    "formatter": {
+      "enabled": false
     }
   },
   "linter": {
