add files to pkg

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "node": ">=20"
   },
   "files": [
+    "configs",
     "index.js",
-    "rules"
+    "rules",
+    "src"
   ],
   "homepage": "https://github.com/Shuunen/eslint-plugin-shuunen",
   "keywords": [
