--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "lint:dep": "depcruise rules index.js --config && echo lint:dep success",
     "lint:eslint": "eslint --cache --max-warnings 0 . && echo lint:eslint success",
     "lint:tsc": "tsc --noEmit && echo lint:tsc success",
-    "postversion": "git push && git push --tags && npm publish --registry https://registry.npmjs.org",
+    "postversion": "git push && git push --tags && npm publish --registry https://registry.npmjs.org && echo publish success",
     "preversion": "pnpm check",
     "start": "pnpm dev",
     "test": "vitest --coverage --run && pnpm test:rules && echo test success",
