--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@eslint/eslintrc": "3.1",
     "eslint-plugin-jsdoc": "48.5",
+    "eslint-plugin-jsonc": "2.16",
     "eslint-plugin-perfectionist": "2.11",
     "eslint-plugin-tailwindcss": "3.17",
     "eslint-plugin-unicorn": "54.0",
