--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Shuunen/eslint-plugin-shuunen.git"
+    "url": "git+https://github.com/Shuunen/eslint-plugin-shuunen.git"
   },
   "scripts": {
     "build": "echo no build task is needed && echo build success",
