--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "scripts": {
     "build": "echo no build task is needed && echo build success",
-    "check": "bun install && echo install success && bun run build && repo-check && bun lint && bun test && echo check success",
+    "check": "bun install && echo install success && bun run build && repo-check && bun lint && bun run test && echo check success",
     "lint": "bun lint:tsc && bun lint:biome && bun lint:knip && bun lint:eslint && echo lint success",
     "lint:biome": "biome check --error-on-warnings --write --unsafe && echo lint:biome success",
     "lint:eslint": "eslint --cache --max-warnings 0 . && echo lint:eslint success",
